change profile by current user and create flash message

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,5 +9,11 @@
     = csrf_meta_tags
   %body
     =render 'layouts/header'
+    -if notice
+      %p.alert.alert-notice
+        =notice
+    -if alert
+      %p.alert.alert-error
+        =alert
     .container
       = yield
