--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,9 @@
-// Place all the styles related to the Users controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.raw{
+  margin-top: 80px;
+}
+.search-box{
+  width: 35%;
+  padding: 8px;
+  margin-top: 80px;
+  font-size: 16px;
+}
