--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,6 +1,9 @@
-.row
-  =@user.username
-  =@user.email
-  =@user.id
+%ul.raw
+  %li<
+    = @user.username
+  %li<
+    = @user.email
+  %li<
+    = @user.id
   -if current_user
     =link_to 'プロフィール編集', edit_user_registration_path
