フィードバックの修正第一弾

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,8 +1,7 @@
 !!! 5
 %html
   %head
-    -# title変えましょう！
-    %title flux_tutorial
+    %title ChatApp
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true
     %link{ href: '//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css', rel: 'stylesheet' }/
     = javascript_include_tag 'application'
