--- a/app/assets/stylesheets/partials/_userList.scss
+++ b/app/assets/stylesheets/partials/_userList.scss
@@ -23,7 +23,7 @@
     }
 
     &--active {
-      background: #93C26D;
+      background: #ffa500;
       color: #fff;
       font-weight: 500;
       position: relative;
