Add feedback comments

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -7,6 +7,7 @@
   %nav
     %ul.nav.navbar-nav.navbar-right#menu
       -if user_signed_in?
+        / %li<の「<」はいらないかな
         %li<
           =link_to 'ユーザーを探す', users_search_path
         %li<
